feat: implement user management features and comprehensive testing suite for foundation and api-server modules